--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,17 @@ a {
   text-decoration: none;
 }
 
+#main-header {
+  width: 100%;
+}
 #main-header #main-nav-bar {
+  width: 100%;
+  height: 70px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  background: #0868AE;
 }
 #main-header #main-nav-bar #container-group-logo {
   margin-right: auto;
@@ -33,13 +39,17 @@ a {
   width: 80px;
 }
 #main-header #main-nav-bar #container-group-search-nav-top #input-search-nav-top {
-  width: 250px;
+  display: none;
+  width: 50px;
   height: 50px;
   border-radius: 15px;
+  padding-left: 30px;
+  border: none;
 }
 #main-header #main-nav-bar #container-group-search-nav-top #btn-search-nav-top {
+  display: none;
   padding: 15px;
-  background-color: aqua;
+  background-color: #f9b017;
   color: #fff;
   border-radius: 10px;
 }
@@ -47,14 +57,47 @@ a {
   margin-left: auto;
 }
 #main-header #main-nav-bar #container-group-btn-connexion #btn-log-in {
-  padding: 15px;
-  background-color: blue;
-  color: #fff;
+  display: none;
+  padding: 13px;
+  background-color: transparent;
+  border: 3px solid #e94a34;
+  color: #e94a34;
   border-radius: 10px;
+  font-weight: bolder;
+  font-size: 16px;
+  font-family: "Hind Madurai", sans-serif;
+  margin-right: 10px;
 }
 #main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up {
   padding: 15px;
-  background-color: aqua;
   color: #fff;
   border-radius: 10px;
+}
+#main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up #menu-burger {
+  width: 50px;
+  height: 50px;
+  background-color: #ff5e38;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  border-radius: 5px;
+}
+#main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up #menu-burger #menu-burger-pipe-top {
+  width: 80%;
+  height: 10%;
+  background-color: #fff;
+}
+#main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up #menu-burger #menu-burger-pipe-middle {
+  width: 80%;
+  height: 10%;
+  background-color: #fff;
+}
+#main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up #menu-burger #menu-burger-pipe-bottom {
+  width: 80%;
+  height: 10%;
+  background-color: #fff;
+}
+#main-header #main-nav-bar #container-group-btn-connexion #btn-sign-up span {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
