--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,6 @@
+$btn-red : #ff5e38;
+$main-blue : #0868AE;
+
 *,
 ::after,
 ::before {
@@ -21,11 +24,15 @@ a {
 }
 
 #main-header {
+  width: 100%;
   #main-nav-bar {
+    width: 100%;
+    height: 70px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    background: $main-blue;
 
     #container-group-logo {
         margin-right: auto;
@@ -37,14 +44,18 @@ a {
 
     #container-group-search-nav-top {
       #input-search-nav-top {
-        width: 250px;
+        display: none;
+        width: 50px;
         height: 50px;
         border-radius: 15px;
+        padding-left: 30px;
+        border: none;
       }
 
       #btn-search-nav-top {
+        display: none;
         padding: 15px;
-        background-color: aqua;
+        background-color: #f9b017;
         color: #fff;
         border-radius: 10px;
       }
@@ -54,17 +65,55 @@ a {
       margin-left: auto;
 
       #btn-log-in {
-        padding: 15px;
-        background-color: blue;
-        color: #fff;
+        display: none;
+        padding: 13px;
+        background-color: transparent;
+        border: 3px solid #e94a34 ;
+        color: #e94a34;
         border-radius: 10px;
+        font-weight: bolder;
+        font-size: 16px;
+        font-family: 'Hind Madurai', sans-serif;margin-right: 10px;
       }
 
       #btn-sign-up {
         padding: 15px;
-        background-color: aqua;
         color: #fff;
         border-radius: 10px;
+
+        #menu-burger {
+          width: 50px;
+          height: 50px;
+          background-color: $btn-red ;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-content: center;
+          border-radius: 5px;
+
+          #menu-burger-pipe-top {
+            width: 80%;
+            height: 10%;
+            background-color: #fff;
+          }
+
+          #menu-burger-pipe-middle{
+            width: 80%;
+            height: 10%;
+            background-color: #fff;
+          }
+
+          #menu-burger-pipe-bottom {
+            width: 80%;
+            height: 10%;
+            background-color: #fff;
+          }
+
+        }
+
+        span {
+          display: none;
+        }
       }
     }
   }
