Update font all pages

--- a/css/style-connect.scss
+++ b/css/style-connect.scss
@@ -24,12 +24,12 @@ body {
 
 h1 {
   margin-bottom: 1.4rem;
-  font-family: "Emilys Candy", cursive;
+  font-family: 'Nova Slim', cursive, sans-serif;
 }
 
 h2 {
   text-align: center;
-  font-family: "Nova Slim", cursive;
+  font-family: 'Hind Madurai', sans-serif;
 }
 
 p {
