--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,11 @@ h3 {
   font-family: "Nova Slim";
   font-style: normal;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 38px;
   letter-spacing: 0.04em;
   color: #0868ae;
+  text-overflow: ellipsis;
 }
 
 p {
@@ -190,7 +191,7 @@ ul {
   border-radius: 50px;
 }
 #section-soon-available #container-cards {
-  width: 343px;
+  width: 90% px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -198,17 +199,40 @@ ul {
   background: #fff;
 }
 #section-soon-available #container-cards .card {
-  width: 100%;
-  height: 460px;
-  margin-bottom: 50px;
-  padding: 24px 24px 32px;
+  position: relative;
+  width: 450px;
+  margin: 100px auto 100px auto;
+  height: 230px;
+  margin-bottom: 100px;
+  padding: 15px 5px 15px 200px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+#section-soon-available #container-cards .card img {
+  position: absolute;
+  top: -40px;
+  left: 25px;
+  width: 150px;
+  height: 230px;
+  -o-object-fit: cover;
+     object-fit: cover;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #section-soon-available #container-cards .card .bottom-item-card h4 {
-  margin: 10px 0;
+  margin: 5px 0;
+}
+#section-soon-available #container-cards .card .bottom-item-card .title-card {
+  font-size: 10px;
 }
 #section-soon-available #container-cards .card .bottom-item-card .description-card {
+  height: 75px;
   margin: 8px 0 8px;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 #section-cta-available {
@@ -217,7 +241,8 @@ ul {
   background-color: #0868ae;
   text-align: center;
 }
-#section-cta-available h2, #section-cta-available p {
+#section-cta-available h2,
+#section-cta-available p {
   color: #fff;
   text-align: center;
 }
