--- a/css/style.scss
+++ b/css/style.scss
@@ -44,10 +44,11 @@ h3 {
   font-family: "Nova Slim";
   font-style: normal;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 38px;
   letter-spacing: 0.04em;
   color: $main-blue;
+  text-overflow: ellipsis;
 }
 
 p {
@@ -227,29 +228,51 @@ ul {
   }
 
   #container-cards {
-    width: 343px;
+    width: 90%px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin: 30px auto;
-    
     background: $white;
-    
 
     .card {
-      width: 100%;
-      height: 460px;
-      margin-bottom: 50px;
-      padding: 24px 24px 32px;
+      position: relative;
+      width: 450px;
+      margin: 100px auto 100px auto;
+      height: 230px;
+      margin-bottom: 100px;
+      padding: 15px 5px 15px 200px;
+      border-radius: 5px;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+      img {
+        position: absolute;
+        top: -40px;
+        left: 25px;
+        width: 150px;
+        height: 230px;
+        object-fit: cover;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
 
       .bottom-item-card {
         h4 {
-          margin: 10px 0;
+          margin: 5px 0;
+        }
+
+        .title-card {
+          font-size: 10px;
         }
 
         .description-card {
+          height: 75px;
           margin: 8px 0 8px;
+          font-size: 14px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 3;
         }
       }
     }
@@ -258,14 +281,14 @@ ul {
 
 // ---------- SECTION - CTA - AVAILABLE ----------
 
-
 #section-cta-available {
   width: 100%;
   padding: 80px;
   background-color: $main-blue;
   text-align: center;
 
-  h2, p {
+  h2,
+  p {
     color: $white;
     text-align: center;
   }
@@ -275,5 +298,4 @@ ul {
     padding: 10px;
     border-radius: 10px;
   }
-  
 }
