--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ h2 {
   color: #0868ae;
   font-weight: bold;
 }
+@media screen and (min-width: 950px) {
+  h1,
+  h2 {
+    font-size: 50px;
+    line-height: 70px;
+  }
+}
 
 h3 {
   font-family: "Nova Slim";
@@ -47,13 +54,19 @@ h3 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
   text-align: start;
   margin: 30px auto;
   font-weight: 400;
   line-height: 24px;
   color: #070606;
   display: block;
+}
+@media screen and (min-width: 950px) {
+  p {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
 
 ul {
@@ -127,17 +140,131 @@ ul {
   width: 100%;
   padding-top: 60px;
 }
+#section-news .flip {
+  position: relative;
+}
+#section-news .flip > .front,
+#section-news .flip > .back {
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 2.5s;
+  transition-property: transform, opacity;
+}
+#section-news .flip > .front {
+  transform: rotateY(0deg);
+}
+#section-news .flip > .back {
+  position: absolute;
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
+}
+#section-news .flip:hover > .front {
+  transform: rotateY(180deg);
+}
+#section-news .flip:hover > .back {
+  opacity: 1;
+  transform: rotateY(0deg);
+}
+#section-news .flip.flip-vertical > .back {
+  transform: rotateX(-180deg);
+}
+#section-news .flip.flip-vertical:hover > .front {
+  transform: rotateX(180deg);
+}
+#section-news .flip.flip-vertical:hover > .back {
+  transform: rotateX(0deg);
+}
+#section-news .flip {
+  position: relative;
+  display: inline-block;
+  margin-right: 1em;
+  margin-bottom: 1em;
+  width: 200px;
+}
+#section-news .flip > .front,
+#section-news .flip > .back {
+  display: block;
+  color: #fff;
+  width: inherit;
+  background-size: cover !important;
+  background-position: center !important;
+  padding: 1em 2em;
+  background: #0868ae;
+  border-radius: 10px;
+}
+#section-news .flip > .front p,
+#section-news .flip > .back p {
+  font-size: 0.9125rem;
+  line-height: 160%;
+  color: #fff;
+}
+#section-news .flip > .front p span,
+#section-news .flip > .back p span {
+  font-weight: bold;
+}
+#section-news .flip > .front-item-1 {
+  height: 240px;
+}
+#section-news .flip > .front-item-2 {
+  height: 180px;
+}
+#section-news .flip > .front-item-3 {
+  height: 240px;
+}
+#section-news .flip > .front-item-4 {
+  height: 180px;
+  display: none;
+}
+@media screen and (min-width: 950px) {
+  #section-news .flip > .front-item-4 {
+    display: block;
+  }
+}
+#section-news .flip > .front-item-5 {
+  height: 180px;
+  display: none;
+}
+@media screen and (min-width: 950px) {
+  #section-news .flip > .front-item-5 {
+    display: block;
+  }
+}
+#section-news .text-shadow {
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
+}
 #section-news #container-section-news {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news {
+    flex-wrap: nowrap;
+  }
 }
 #section-news #container-section-news #item-section-news-left h1 {
   white-space: nowrap;
 }
+#section-news #container-section-news #item-section-news-left p {
+  text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-left {
+    width: 50%;
+  }
+}
 #section-news #container-section-news #item-section-news-right {
   width: 100%;
   text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-right {
+    width: 50%;
+  }
 }
 #section-news #container-section-news #item-section-news-right #item-news-right-top {
   display: flex;
@@ -145,8 +272,12 @@ ul {
   align-items: baseline;
 }
 #section-news #container-section-news #item-section-news-right #item-news-right-top img:first-of-type {
-  margin-right: 10px;
+  margin-right: 15px;
   margin-bottom: 10px;
+}
+#section-news #container-section-news #item-section-news-right #item-news-right-bottom {
+  display: flex;
+  justify-content: center;
 }
 
 #section-heart {
