--- a/css/style.scss
+++ b/css/style.scss
@@ -59,7 +59,7 @@ p {
   font-size: 14px;
   text-align: start;
   margin: 30px auto;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 24px;
   color: $black;
   display: block;
@@ -323,6 +323,84 @@ ul {
 
   p {
     text-align: center;
+    margin-bottom: 160px;
+    @media screen and (min-width: 950px) {
+      margin-bottom: 120px;
+    }
+  }
+
+  ul {
+    @media screen and (min-width: 950px) {
+      display: flex;
+      flex-wrap: wrap;
+      padding-right: 25px;
+    }
+    li {
+      margin-bottom: 80px;
+      @media screen and (min-width: 950px) {
+        width: 33%;
+        margin-right: -100px;
+        margin-left: -30px;
+        padding: 0;
+
+        &:hover {
+          transform: translateY(-50px);
+        }
+      }
+      a {
+        font-weight: bolder;
+        line-height: 155px;
+        font-size: 300px;
+        font-family: "Risque", cursive, sans-serif;
+        img {
+          width: 180px;
+          height: 280px;
+          object-fit: cover;
+          border-radius: 20px;
+          margin-left: -50px;
+        }
+      }
+    }
+
+    li:nth-child(1) {
+      a {
+        color: #ff6b38;
+        position: relative;
+        left: -10%;
+        top: 0;
+
+        @media screen and (min-width: 950px) {
+          left: -120px;
+          top: 100px;
+          margin-right: -100px;
+        }
+
+        img {
+          position: absolute;
+          transform-origin: bottom left;
+          transform: rotate(-5deg);
+          width: 200px;
+          height: 300px;
+          margin-left: -30px;
+          top: 0px;
+        }
+      }
+    }
+    li:nth-child(2) {
+      a {
+        color: #28e2d9;
+      }
+    }
+    li:nth-child(3) {
+      a {
+        color: #ffd317;
+      }
+    }
+    li:nth-child(4) {
+      a {
+        color: #0b95fa;
+      }
+    }
   }
 
   #btn-show-heart {
