--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 $btn-red: #ff5e38;
+$btn-red-hover: #b53928;
 $main-blue: #0868ae;
 $white: #fff;
 $black: #070606;
@@ -82,70 +83,141 @@ ul {
   width: 100%;
 
   #main-nav-bar {
-    width: 100%;
-    height: 72px;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @media screen and (min-width: 950px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 999;
+      width: 100%;
+    }
     background: $main-blue;
-
-    #container-group-logo {
+    #container-nav-bar {
+      width: 100%;
+      height: 72px;
+      padding: 10px;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      margin-right: auto;
 
-      img {
-        width: 70px;
+      #container-group-logo {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-right: auto;
+
+        img {
+          width: 85px;
+        }
+
+        #nav-logo-text {
+          font-family: "Risque", cursive, sans-serif;
+          font-size: 36px;
+          color: #fff;
+        }
       }
 
-      #nav-logo-text {
-        font-family: "Risque", cursive, sans-serif;
-        font-size: 36px;
-        color: #fff;
-      }
-    }
-
-    #container-group-search-nav-top {
-      #input-search-nav-top {
-        display: none;
-      }
-
-      #btn-search-nav-top {
-        display: none;
-      }
-    }
-
-    #container-group-btn-connexion {
-      margin-left: auto;
-
-      #btn-log-in {
-        display: none;
-      }
-
-      #btn-sign-up {
-        #menu-burger {
-          width: 50px;
-          height: 50px;
-          color: $white;
-          border-radius: 10px;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-evenly;
-          align-content: center;
-          border-radius: 5px;
-
-          .menu-burger-pipe {
-            width: 80%;
-            height: 10%;
-            background-color: $white;
-            margin: 0 auto;
+      #container-group-search-nav-top {
+        position: relative;
+        #input-search-nav-top {
+          display: none;
+          @media screen and (min-width: 950px) {
+            display: block;
+            position: relative;
+            width: 600px;
+            height: 50px;
+            border-radius: 15px;
+            padding-left: 30px;
+            border: none;
           }
         }
-        span {
+
+        #btn-search-nav-top {
           display: none;
+          @media screen and (min-width: 950px) {
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 150px;
+            padding: 14px;
+            background-color: $btn-red;
+            color: #fff;
+            border-radius: 10px;
+            text-align: center;
+
+            &:hover {
+              background-color: $btn-red-hover;
+            }
+          }
+        }
+      }
+
+      #container-group-btn-connexion {
+        margin-left: auto;
+        @media screen and (min-width: 950px) {
+          display: flex;
+          justify-items: center;
+          align-items: center;
+        }
+
+        #btn-log-in {
+          display: none;
+          @media screen and (min-width: 950px) {
+            display: block;
+            padding: 12px;
+            background-color: transparent;
+            border: 3px solid $btn-red;
+            color: $btn-red;
+            border-radius: 10px;
+            font-weight: bolder;
+            font-size: 16px;
+            font-family: "Hind Madurai", sans-serif;
+            margin-right: 10px;
+          }
+        }
+
+        #btn-sign-up {
+          #menu-burger {
+            width: 50px;
+            height: 50px;
+            color: $white;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-content: center;
+            border-radius: 5px;
+
+            .menu-burger-pipe {
+              width: 80%;
+              height: 10%;
+              background-color: $white;
+              margin: 0 auto;
+            }
+            @media screen and (min-width: 950px) {
+              display: none;
+            }
+          }
+          span {
+            display: none;
+            @media screen and (min-width: 950px) {
+              display: block;
+              @media screen and (min-width: 950px) {
+                display: block;
+                padding: 12px;
+                padding: 14px;
+                background-color: $btn-red;
+                color: #fff;
+                border-radius: 10px;
+                text-align: center;
+  
+                &:hover {
+                  background-color: $btn-red-hover;
+                }
+              }
+            }
+          }
         }
       }
     }
@@ -156,7 +228,7 @@ ul {
 
 #section-news {
   width: 100%;
-  padding-top: 60px;
+  padding-top: 120px;
 
   .flip {
     position: relative;
@@ -417,6 +489,11 @@ ul {
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
     color: $white;
+
+    &:hover {
+      opacity: 0.9;
+      transform: scale(1.1);
+    }
   }
 }
 
