--- a/css/style.scss
+++ b/css/style.scss
@@ -56,7 +56,7 @@ h3 {
   text-overflow: ellipsis;
 }
 
-p {
+#sub-title {
   font-size: 14px;
   text-align: start;
   margin: 30px auto;
@@ -145,6 +145,7 @@ ul {
             color: #fff;
             border-radius: 10px;
             text-align: center;
+            transition: background-color 0.3s ease;
 
             &:hover {
               background-color: $btn-red-hover;
@@ -211,6 +212,7 @@ ul {
                 color: #fff;
                 border-radius: 10px;
                 text-align: center;
+                transition: background-color 0.3s ease;
   
                 &:hover {
                   background-color: $btn-red-hover;
@@ -296,6 +298,7 @@ ul {
         font-size: 0.9125rem;
         line-height: 160%;
         color: $white;
+        text-align: start;
         span {
           font-weight: bold;
         }
@@ -414,6 +417,7 @@ ul {
         margin-right: -100px;
         margin-left: -30px;
         padding: 0;
+        transition: transform 0.5s ease;
 
         &:hover {
           transform: translateY(-50px);
@@ -489,6 +493,7 @@ ul {
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
     color: $white;
+    transition: opacity 0.3s ease, transform 0.3s ease;
 
     &:hover {
       opacity: 0.9;
@@ -544,6 +549,11 @@ ul {
         height: 230px;
         object-fit: cover;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        transition: transform 0.5s ease;
+
+        &:hover {
+          transform: translateY(-15px);
+        }
       }
 
       .bottom-item-card {
