--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ ul {
   list-style-type: none;
 }
 
+#font-logo {
+  font-family: "Risque", cursive, sans-serif;
+  letter-spacing: 2px;
+}
+
 #main-header {
   width: 100%;
 }
@@ -227,7 +232,12 @@ ul {
 
 #section-news {
   width: 100%;
-  padding-top: 120px;
+  padding-top: 60px;
+}
+@media screen and (min-width: 950px) {
+  #section-news {
+    padding-top: 120px;
+  }
 }
 #section-news .flip {
   position: relative;
@@ -553,4 +563,83 @@ ul {
   background-color: #fff;
   padding: 10px;
   border-radius: 10px;
+}
+
+#section-blog {
+  padding: 80px;
+  position: relative;
+}
+#section-blog h3 {
+  text-align: center;
+}
+#section-blog h2 {
+  margin-bottom: 60px;
+}
+#section-blog #container-section-blog {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 auto;
+}
+#section-blog #container-section-blog .card-blog {
+  width: 345px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 20px 20px 0 0;
+  overflow: hidden;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 40px;
+}
+#section-blog #container-section-blog .card-blog .card-blog-top {
+  height: 50%;
+  background-image: url(../img/top-img-card.png);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+#section-blog #container-section-blog .card-blog .card-blog-top .article-infos {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 72px;
+  padding: 16px;
+  background: rgba(255, 255, 255, 0.3);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(12px);
+          backdrop-filter: blur(12px);
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+}
+#section-blog #container-section-blog .card-blog .card-blog-top .article-infos div {
+  float: left;
+}
+#section-blog #container-section-blog .card-blog .card-blog-top .article-infos .category {
+  float: right;
+}
+#section-blog #container-section-blog .card-blog .card-blog-bottom {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px 24px;
+}
+#section-blog #container-section-blog .card-blog .card-blog-bottom h4 {
+  font-family: "Nova Slim", cursive, sans-serif;
+}
+#section-blog #container-section-blog .card-blog .card-blog-bottom p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  margin: 10px 0 24px;
+}
+#section-blog #container-section-blog .card-blog .card-blog-bottom a {
+  font-size: 14px;
+  color: #0868ae;
+}
+#section-blog #container-section-blog .card-blog:hover {
+  transform: scale(1.05);
 }/*# sourceMappingURL=style.css.map */
