--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ h2 {
   letter-spacing: 0.04em;
   color: $main-blue;
   font-weight: bold;
+
   @media screen and (min-width: 950px) {
     font-size: 50px;
     line-height: 70px;
@@ -64,6 +65,7 @@ h3 {
   line-height: 24px;
   color: $black;
   display: block;
+
   @media screen and (min-width: 950px) {
     font-size: 18px;
     line-height: 30px;
@@ -75,6 +77,11 @@ ul {
   margin-top: 40px;
   margin-bottom: 40px;
   list-style-type: none;
+}
+
+#font-logo {
+  font-family: 'Risque', cursive, sans-serif;
+  letter-spacing: 2px;
 }
 
 // ---------- HEADER - NAV - TOP ----------
@@ -90,7 +97,9 @@ ul {
       z-index: 999;
       width: 100%;
     }
+
     background: $main-blue;
+
     #container-nav-bar {
       width: 100%;
       height: 72px;
@@ -119,8 +128,10 @@ ul {
 
       #container-group-search-nav-top {
         position: relative;
+
         #input-search-nav-top {
           display: none;
+
           @media screen and (min-width: 950px) {
             display: block;
             position: relative;
@@ -134,6 +145,7 @@ ul {
 
         #btn-search-nav-top {
           display: none;
+
           @media screen and (min-width: 950px) {
             display: block;
             position: absolute;
@@ -156,6 +168,7 @@ ul {
 
       #container-group-btn-connexion {
         margin-left: auto;
+
         @media screen and (min-width: 950px) {
           display: flex;
           justify-items: center;
@@ -164,6 +177,7 @@ ul {
 
         #btn-log-in {
           display: none;
+
           @media screen and (min-width: 950px) {
             display: block;
             padding: 12px;
@@ -196,14 +210,18 @@ ul {
               background-color: $white;
               margin: 0 auto;
             }
+
             @media screen and (min-width: 950px) {
               display: none;
             }
           }
+
           span {
             display: none;
+
             @media screen and (min-width: 950px) {
               display: block;
+
               @media screen and (min-width: 950px) {
                 display: block;
                 padding: 12px;
@@ -213,7 +231,7 @@ ul {
                 border-radius: 10px;
                 text-align: center;
                 transition: background-color 0.3s ease;
-  
+
                 &:hover {
                   background-color: $btn-red-hover;
                 }
@@ -230,21 +248,29 @@ ul {
 
 #section-news {
   width: 100%;
-  padding-top: 120px;
+  padding-top: 60px;
+
+  @media screen and (min-width: 950px) {
+    padding-top: 120px;
+  }
+
 
   .flip {
     position: relative;
-    > .front,
-    > .back {
+
+    >.front,
+    >.back {
       display: block;
       transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
       transition-duration: 2.5s;
       transition-property: transform, opacity;
     }
-    > .front {
+
+    >.front {
       transform: rotateY(0deg);
     }
-    > .back {
+
+    >.back {
       position: absolute;
       opacity: 0;
       top: 0px;
@@ -253,24 +279,29 @@ ul {
       height: 100%;
       transform: rotateY(-180deg);
     }
+
     &:hover {
-      > .front {
+      >.front {
         transform: rotateY(180deg);
       }
-      > .back {
+
+      >.back {
         opacity: 1;
         transform: rotateY(0deg);
       }
     }
+
     &.flip-vertical {
-      > .back {
+      >.back {
         transform: rotateX(-180deg);
       }
+
       &:hover {
-        > .front {
+        >.front {
           transform: rotateX(180deg);
         }
-        > .back {
+
+        >.back {
           transform: rotateX(0deg);
         }
       }
@@ -284,8 +315,9 @@ ul {
     margin-right: 1em;
     margin-bottom: 1em;
     width: 200px;
-    > .front,
-    > .back {
+
+    >.front,
+    >.back {
       display: block;
       color: $white;
       width: inherit;
@@ -294,36 +326,44 @@ ul {
       padding: 1em 2em;
       background: $main-blue;
       border-radius: 10px;
+
       p {
         font-size: 0.9125rem;
         line-height: 160%;
         color: $white;
         text-align: start;
+
         span {
           font-weight: bold;
         }
       }
     }
 
-    > .front-item-1 {
+    >.front-item-1 {
       height: 240px;
     }
-    > .front-item-2 {
+
+    >.front-item-2 {
       height: 180px;
     }
-    > .front-item-3 {
+
+    >.front-item-3 {
       height: 240px;
     }
-    > .front-item-4 {
+
+    >.front-item-4 {
       height: 180px;
       display: none;
+
       @media screen and (min-width: 950px) {
         display: block;
       }
     }
-    > .front-item-5 {
+
+    >.front-item-5 {
       height: 180px;
       display: none;
+
       @media screen and (min-width: 950px) {
         display: block;
       }
@@ -356,9 +396,11 @@ ul {
       h1 {
         white-space: nowrap;
       }
+
       p {
         text-align: center;
       }
+
       @media screen and (min-width: 950px) {
         width: 50%;
       }
@@ -367,6 +409,7 @@ ul {
     #item-section-news-right {
       width: 100%;
       text-align: center;
+
       @media screen and (min-width: 950px) {
         width: 50%;
       }
@@ -399,6 +442,7 @@ ul {
   p {
     text-align: center;
     margin-bottom: 160px;
+
     @media screen and (min-width: 950px) {
       margin-bottom: 120px;
     }
@@ -410,8 +454,10 @@ ul {
       flex-wrap: wrap;
       padding-right: 25px;
     }
+
     li {
       margin-bottom: 80px;
+
       @media screen and (min-width: 950px) {
         width: 33%;
         margin-right: -100px;
@@ -423,11 +469,13 @@ ul {
           transform: translateY(-50px);
         }
       }
+
       a {
         font-weight: bolder;
         line-height: 155px;
         font-size: 300px;
         font-family: "Risque", cursive, sans-serif;
+
         img {
           width: 180px;
           height: 280px;
@@ -462,16 +510,19 @@ ul {
         }
       }
     }
+
     li:nth-child(2) {
       a {
         color: #28e2d9;
       }
     }
+
     li:nth-child(3) {
       a {
         color: #ffd317;
       }
     }
+
     li:nth-child(4) {
       a {
         color: #0b95fa;
@@ -599,4 +650,100 @@ ul {
     padding: 10px;
     border-radius: 10px;
   }
+}
+
+// ---------- SECTION - BLOG ----------
+
+#section-blog {
+  padding: 80px;
+  position: relative;
+
+  h3 {
+    text-align: center;
+  }
+
+  h2 {
+    margin-bottom: 60px;
+  }
+
+  #container-section-blog {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 auto;
+
+
+    .card-blog {
+      width: 345px;
+      height: 400px;
+      background-color: $white;
+      border-radius: 20px 20px 0 0;
+      overflow: hidden;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+      margin-bottom: 40px;
+      
+
+      .card-blog-top {
+        height: 50%;
+        background-image: url(../img/top-img-card.png);
+        background-position: center;
+        background-size: cover;
+        position: relative;
+
+        .article-infos {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 72px;
+          padding: 16px;
+          background: rgba(255, 255, 255, 0.3);
+          border-top: 1px solid rgba(255, 255, 255, 0.5);
+          backdrop-filter: blur(12px);
+          color: $white;
+          font-weight: bold;
+          font-size: 14px;
+
+          div {
+            float: left;
+          }
+
+          .category {
+            float: right;
+          }
+        }
+      }
+
+      .card-blog-bottom {
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px 24px;
+
+        h4 {
+          font-family: 'Nova Slim', cursive, sans-serif;
+        }
+
+        p {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 24px;
+          margin: 10px 0 24px;
+        }
+
+        a {
+          font-size: 14px;
+          color: $main-blue;
+        }
+      }
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
+
 }
