--- a/css/style.scss
+++ b/css/style.scss
@@ -141,6 +141,7 @@ ul {
             padding-left: 30px;
             border: none;
           }
+
           @media screen and (min-width: 1100px) {
             width: 600px;
           }
@@ -640,7 +641,9 @@ ul {
 #section-cta-available {
   width: 100%;
   padding: 80px;
-  background-color: $main-blue;
+  background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190,0.04) 0%, rgba(190, 190, 190,0.04) 17%,transparent 17%, transparent 100%),radial-gradient(circle at 73% 2%, rgba(78, 78, 78,0.04) 0%, rgba(78, 78, 78,0.04) 94%,transparent 94%, transparent 100%),radial-gradient(circle at 45% 2%, rgba(18, 18, 18,0.04) 0%, rgba(18, 18, 18,0.04) 55%,transparent 55%, transparent 100%),radial-gradient(circle at 76% 60%, rgba(110, 110, 110,0.04) 0%, rgba(110, 110, 110,0.04) 34%,transparent 34%, transparent 100%),radial-gradient(circle at 68% 56%, rgba(246, 246, 246,0.04) 0%, rgba(246, 246, 246,0.04) 16%,transparent 16%, transparent 100%),radial-gradient(circle at 71% 42%, rgba(156, 156, 156,0.04) 0%, rgba(156, 156, 156,0.04) 47%,transparent 47%, transparent 100%),radial-gradient(circle at 46% 82%, rgba(247, 247, 247,0.04) 0%, rgba(247, 247, 247,0.04) 39%,transparent 39%, transparent 100%),radial-gradient(circle at 50% 47%, rgba(209, 209, 209,0.04) 0%, rgba(209, 209, 209,0.04) 45%,transparent 45%, transparent 100%),linear-gradient(90deg, rgb(8,104,174),rgb(5,73,123));
+  background-position: center;
+  background-size: cover;
   text-align: center;
 
   h2,
@@ -755,5 +758,82 @@ ul {
       }
     }
   }
+}
 
+
+// ---------- SECTION - FAQ ----------
+
+
+#section-faq {
+  padding: 80px;
+  position: relative;
+
+  h3 {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  #container-faq {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+
+    hr {
+      width: 58%;
+      margin-top: 5px;
+      border: 1px solid grey;
+    }
+
+    .item-faq {
+      position: relative;
+      width: 90%;
+      max-width: 770px;
+      min-height: 80px;
+      padding-left: 15px;
+      padding-right: 15px;
+      cursor: pointer;
+
+      .toggle-symbol {
+        position: absolute;
+        top: 15px;
+        right: 20px;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+
+        &:before {
+          content: "+";
+        }
+      }
+
+      .question {
+        margin-bottom: 5px;
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+      .faq-answer {
+        display: none;
+      }
+
+      &.active {
+        .faq-answer {
+          display: block;
+        }
+
+        .toggle-symbol:before {
+          content: "-";
+        }
+      }
+
+      p {
+        &:first-child {
+          margin-bottom: 5px;
+          font-size: 18px;
+          font-weight: bold;
+        }
+      }
+    }
+  }
 }
