--- a/css/style.scss
+++ b/css/style.scss
@@ -1104,6 +1104,8 @@ h3 {
           width: 250px;
           height: 34px;
           margin-top: 10px;
+          font-size: 16px;
+          font-weight: bold;
           background-color: $btn-red;
           color: $white;
           border-radius: 10px;
@@ -1114,7 +1116,6 @@ h3 {
           @media screen and (min-width: 950px) {
             width: 110px;
             height: 48px;
-            font-size: 16px;
             margin-left: 10px;
           }
 
