--- a/css/style.scss
+++ b/css/style.scss
@@ -180,18 +180,23 @@ h3 {
 
         #btn-log-in {
           display: none;
+          font-weight: bold;
 
           @media screen and (min-width: 950px) {
             display: block;
             padding: 10px;
             background-color: transparent;
-            border: 3px solid $btn-red;
             color: $btn-red;
-            border-radius: 10px;
-            font-weight: bolder;
             font-size: 16px;
             font-family: "Hind Madurai", sans-serif;
             margin-right: 10px;
+
+            &:hover {
+              border: 3px solid $btn-red;
+              border-radius: 10px;
+              margin-left: -6px;
+
+            }
           }
         }
 
@@ -974,12 +979,12 @@ h3 {
 
   #container-info-location {
     max-width: 1200px;
+    height: 250px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    height: 200px;
     margin-top: 500px;
     border-radius: 0 0 50px 50px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
@@ -1205,6 +1210,4 @@ h3 {
     max-width: 1440px;
     margin: 0 auto;
   }
-
-
 }
