--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,27 @@ h3 {
     margin-bottom: 120px;
   }
 }
+#section-heart #group-btn {
+  width: 100%;
+}
+#section-heart #group-btn ul {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: 1px solid #070606;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+#section-heart #group-btn ul li {
+  padding: 15px;
+  margin: 0;
+}
+#section-heart #group-btn ul li a {
+  font-size: 16px;
+  color: #0868ae;
+}
 #section-heart ul {
   text-align: center;
   margin-top: 40px;
@@ -841,7 +862,7 @@ h3 {
   transform: translate(-50%, -50%);
 }
 #section-location #container-info-location {
-  max-width: 1200px;
+  max-width: 400px;
   height: 250px;
   margin: 0 auto;
   display: flex;
@@ -1040,7 +1061,7 @@ h3 {
 }
 #footer #container-footer-bottom p {
   text-align: center;
-  color: #D0D5DD;
+  color: #d0d5dd;
 }
 @media screen and (min-width: 950px) {
   #footer #container-footer-bottom p {
